--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+/*********************************************************************************************************
+*
+*                                                 GENERAL CSS
+*
+***********************************************************************************************************/
+
 :root {
+    /* Font-family */
+    --roboto-condensed: "Roboto Condensed";
+    --playfair-display: "Playfair Display";
+
     --max-width: 1200px;
     --black: #000;
     --white: #FFF;
@@ -8,17 +21,104 @@
     --yellow2: #f3ffb5;
     --red: #ff0000;
     --green: #1dad22;
+    --blue: #0f5fff;
+    --overlay: rgba(0, 0, 0, 0.4);
+
+    /* Headings and text font size */
+    --h1: clamp(40px, 10vw, 70px);
+    --h2: clamp(35px, 10vw, 60px);
+    --h3: clamp(30px, 10vw, 50px);
+    --h4: clamp(25px, 10vw, 40px);
+    --h5: clamp(20px, 10vw, 30px);
+    --h6: clamp(15px, 10vw, 20px);
+    --text: clamp(12px, 10vw, 16px);
 }
 
 * {
     box-sizing: border-box;
 }
 
-.container {
-    max-width: var(--max-width);
-    margin: 0 auto;
+body {
+    font-family: var(--roboto-condensed), sans-serif;
+    font-size: var(--text);
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--playfair-display), sans-serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+}
+
+h1 {
+    font-size: var(--h1);
+}
+
+h2 {
+    font-size: var(--h2);
+}
+
+h3 {
+    font-size: var(--h3);
+}
+
+h4 {
+    font-size: var(--h4);
+}
+
+h5 {
+    font-size: var(--h5);
+}
+
+h6 {
+    font-size: var(--h6);
+}
+
+.container {
+    max-width: var(--max-width);
+    margin: 1rem auto;
+}
+
+.table-nav {
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* Button */
+button.primary-btn {
+    outline: none;
+    border: none;
+    background: var(--gray1);
+    color: var(--white);
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px var(--white2);
+    transition: all ease-in-out 0.3s;
+}
+
+button.primary-btn:hover{
+    box-shadow: 5px 5px 5px var(--white2);
+    background: var(--white);
+    color: var(--gray1);
+}
+
+/* For close button */
+.close-button {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.close-button span {
+    cursor: pointer;
+
+}
+
+/*****************************************************************************************
+*
+*                                         TABLE SECTION
+*
+*****************************************************************************************/
 section#crud-table table{
     margin: 2rem;
     padding: 1rem;
@@ -34,7 +134,7 @@ section#crud-table table thead th {
     transition: background-color ease-in-out 0.3s;
 }
 
-section#crud-table table thead th h4 {
+section#crud-table table thead th h6 {
     text-align: center;
     font-weight: bold;
     margin: 0;
